# aruba-fatturazione-elettronica-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  container.yml  docs.yml  publish.yml  release-please.yml
docs/: api-parity.md  changelog.md  configuration.md  development.md  docker.md  index.md  llm-tools.md  quickstart.md  security.md  tools.md  troubleshooting.md
src/aruba_fatturazione_elettronica_mcp/: __init__.py  __main__.py  annotations.py  audit.py  auth.py  cli.py  client.py  config.py  endpoints.py  errors.py  invoice_xml.py  llm_tools.py  local_index.py  models.py  rate_limit.py  redaction.py  server.py
tests/: test_auth.py  test_cli.py  test_client_read_only.py  test_endpoints_registry.py  test_llm_tools.py  test_rate_limit.py  test_redaction.py  test_sensitive_reads.py  test_tools_read_only.py
